# pyzkinject

./: .gitignore  CMakeLists.txt  compile_commands.json
debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  install_manifest.txt
debug/.cmake/api/v1/reply/: cache-v2-166f23698ac13db29b94.json  cmakeFiles-v1-aa00446445ac282a33ad.json  codemodel-v2-eeb1592953075cf16cab.json  index-2023-01-08T21-48-49-0051.json  target-pyzkinject-Debug-ffb000dad78c5be47365.json
examples/: zkelf_example.py  zklog_example.py
python/: ]  pyzkinject.cpp  zkelf.cpp  zkinject.cpp  zklog.cpp  zkmemorymap.cpp  zkprocess.cpp  zkptrace.cpp
